# ring

./: .gitignore  .python-version  README.md  compose.core.yml  compose.dev.yml  compose.prod.yml  compose.test.yml  destination.json  dev.nginx.conf  dev.py  docker-compose.yml  docker-compose.yml.deprecated  nginx.conf  prod.nginx.conf  pyproject.toml  requirements.txt  todo.md  webmanifest.json
.github/workflows/: run_fe_test.yml  run_lint.yml  run_test.yml
alembic/versions/: 5ee42bce6804_alembic_init_all_models.py
client/: .dockerignore  .env.client  client.Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
client/app/: layout.tsx  page.tsx
client/app/auth/: auth.config.ts  auth.ts  middleware.ts
client/app/login/: login.tsx  page.tsx
client/app/register/: page.tsx
dev_util/: check.py  compose.py  database.py  dev.py  docker.py  frontend.py  prod.sh  run.py  setup.py  ssl.sh  test.py
issues/adults/: 1.html  1.txt  2.html  2.txt
issues/adults/1_files/: 7864-b48d5ef9c151b0b4.js  abd88d45dcd80394.css  webpack-7a01275847ff1b9e.js
issues/adults/2_files/: IMG_9284.heic  main-app-298ad2dd1270aebf.js
react/: client.Dockerfile  index.html  modify-openapi-operationids.js  openapi-ts.config.ts  openapi.json  package.json  tsconfig.json  vite.config.ts
react/src/: App.tsx  main.tsx  routeTree.gen.ts  sw.js  theme.tsx  utils.ts
react/src/__tests__/: App-test.ts
react/src/client/: models.ts  schemas.ts  sdk.gen.ts  services.ts  types.gen.ts
react/src/hooks/: useAuth.ts  useRegister.ts
react/src/routes/: __root.tsx  _layout.tsx  login.tsx  recover-password.tsx  reset-password.tsx
react/src/util/: QuestionBank.ts  URLParse.ts  notifications.ts
ring/: Dockerfile  alembic.ini  celery.Dockerfile  config.py  dependencies.py  email.py  email_util.py  fast.py  init_db.py  requirements.txt  ring.Dockerfile  routes.py  security.py  sqlalchemy_base.py  worker.py
ring/alembic/: env.py
ring/alembic/versions/: 051a3d150488_add_subscription_table_for_notifications.py  07ff6f6066f4_backfill_invite_one_time_token.py  3b9996219fea_create_invite_model.py  462f823cd7d6_add_token_type_column.py  46d43335aaf4_createdatmixin.py  5236e7636275_task_message_column.py  (+22 more)
ring/api/: __init__.py  authn.py  group.py  letter.py  question.py  response.py  schedule.py  user.py
ring/api_identifier/: api_identified_model.py  util.py
ring/created_at/: __init__.py
ring/crud/: api_identifier.py  group.py  letter.py  question.py  response.py  schedule.py  task.py  user.py
ring/letters/: constants.py
ring/lib/: logger.py  util.py
ring/models/: email_model.py  letter_model.py
ring/postgres_models/: __init__.py  api_identified.py  group_model.py  letter_model.py  pydantic_model.py  question_model.py  response_model.py  s3_model.py  schedule_model.py  task_model.py  user_group_assocation.py  user_model.py
ring/pydantic/: linked_schemas.py
ring/pydantic_schemas/: __init__.py  group.py  image.py  letter.py  linked_schemas.py  question.py  response.py  schedule.py  schemas.py  task.py  user.py
ring/pynamo_models/: base_model.py  email_model.py  letter_model.py
ring/ring_pydantic/: __init__.py  core.py  linked_schemas.py  pydantic_model.py
ring/scripts/: backfill_invite_ott.py  list_users.py  run_sql.py  script_base.py  script_runner.py
ring/service_layer/: unit_of_work.py
ring/shell/: shell.py
ring/tests/: conftest.py  dev_requirements.txt  test.Dockerfile
ring/worker/: celery_app.py  celery_imports.py
services/spotigo/: docker-compose.yml
(+147 files in other folders)
