[build-system]
requires = [
    "setuptools >= 65",
    "wheel >= 0.38"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ring", "dev"]
namespaces = false

[project]
name = "ring"
version = "0.1.0"
description = "A clone of LetterLoop"
requires-python = ">=3.12"
dependencies = [
    "pynamodb ~= 5.0",
    "pydantic ~= 2.5",
    "fastapi[all] ~= 0.104",
    "shortuuid ~= 1.0",
    "pip-tools ~= 7.3",
    "flower ~= 2.0",
    "Redis ~= 5.0",
    "boto3 ~= 1.34",
    "SQLAlchemy ~= 2.0",
    "pgcli ~= 4.0",
    "ipython ~= 8.20",
    "alembic ~= 1.13",
    "psycopg2-binary ~= 2.9",
    "celery ~= 5.3",
    "python-jose[cryptography] ~= 3.3",
    "passlib[bcrypt] ~= 1.7",
    "watchdog ~= 4.0",
    "mypy_boto3_ses ~= 1.34",
    "click ~= 8.1.7",
]

[project.scripts]
dev = "dev:dev"