[build-system]
requires = [
    "setuptools >= 65",
    "wheel >= 0.38"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ring", "dev_util"]
namespaces = false

[tool.ruff]
line-length = 79

[tool.ruff.lint.per-file-ignores]
"ring/alembic/versions/**.py" = ["F401"]

[project]
name = "ring"
version = "0.1.0"
description = "A clone of LetterLoop"
requires-python = ">=3.12"
dependencies = [
    "pynamodb ~= 5.0",
    "pydantic ~= 2.5",
    "fastapi[all] ~= 0.104",
    "shortuuid ~= 1.0",
    "flower ~= 2.0",
    "Redis ~= 5.0",
    "boto3 ~= 1.34",
    "boto3-stubs[essential,ses] ~= 1.34",
    "SQLAlchemy ~= 2.0",
    "sqlalchemy[asyncio] ~= 2.0",
    "pgcli ~= 4.0",
    "ipython ~= 8.20",
    "alembic ~= 1.13",
    "psycopg2-binary ~= 2.9",
    "celery ~= 5.3",
    "python-jose[cryptography] ~= 3.3",
    "pwdlib[argon2,bcrypt] ~= 0.2",
    "watchdog ~= 4.0",
    "mypy_boto3_ses ~= 1.34",
    "click ~= 8.1.7",
    "pyjwt ~= 2.8",
    "ipython-autoimport",
    "ipython-autotime",
    "pprintpp",
    "ruff",
    "bs4",
    "requests",
]

[project.scripts]
ring = "dev_util.dev:dev"
